tests/compile_fail/unhandled_external.out
In file included from tests/compile_fail/unhandled_external.cpp:13:
src/secureenumconverter.inc: In static member function ‘static std::optional<_Tp> SecureEnumConverter<InternalType, ExternalType>::toInternalOpt(SecureEnumConverter<InternalType, ExternalType>::External) [with InternalType = A; ExternalType = B; SecureEnumConverter<InternalType, ExternalType>::External = B]’:
src/secureenumconverter.inc:25:12: error: enumeration value ‘B3’ not handled in switch [-Werror=switch]
     switch (external) {
            ^
compilation terminated due to -Wfatal-errors.
cc1plus: some warnings being treated as errors
